--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1291,15 +1291,21 @@ main{
 }
 
 
-@media (min-width:320px) {
+@media (max-width:320px) {
   #arp-advogado{
     width: 100%;
     display: flex;
     justify-content: center;
     font-size: 1rem;
   }
-  #services .gy-4{
-    padding-left: 1rem;
+  #services > .container{
+    min-width: 100vw;
+  }
+  #services > .container > .row {
+    width: 100vw;
+  }
+  #services > .container > .row > .col-lg-4{
+    width: 95%;
   }
 }
 
